# vlem

./: .gitignore  .pre-commit-config.yaml  README.md  labs.json  package-lock.json  package.json  pyproject.toml
.github/: publish.yml
.github/workflows/: check-pr.yml  deploy-web-preview.yml  deploy-web-production.yml  deploy-web.yml  npm-publish.yml  publish.yml
data/: labs.json
src/: constants.js  constants.ts  handlers.ts  helpers.ts  index.js  index.ts  types.ts  utils.js  utils.ts
src/vlem/: __main__.py  config.py  constants.py  error.py  handler.py  helper.py  logger.py  utils.py
tests/: helper_test.py
web/: .gitignore  netlify.toml  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts  wrangler.toml
web/functions/: labs.ts
web/functions/api/: labs.ts
web/netlify/functions/: getLabs.ts
web/scripts/: copy-data.js
