[project]
name = "vlem"
version = "0.1.0"
description = "Vulnerable Lab Environment Manager (vLEM)"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "python",
    "vulnerability management",
    "lab environment",
    "automation",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "typer[all]>=0.15.4,<0.16.0",
    "docker>=7.1.0,<8.0.0",
    "rich>=14.0.0,<15.0.0",
]

[project.scripts]
vlem = "vlem.__main__:app"

[tool.black]
line-length = 88
target-version = [
    'py39',
    'py310',
    'py311',
    'py312',
] # Aligned with requires-python
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

# Removed [tool.pre-commit] - pre-commit configuration typically goes in .pre-commit-config.yaml

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.2.0"
black = "^25.1.0"
prettier = "^0.0.7"
